# isf-kit

./: .gitignore  GTM_BRAIN.txt  README.md  STATUS.md  gap-closure-spec.md  issue-retail-demo.md  prompt_plan.md  pyproject.toml  repomix-output.xml  skills-gap-analysis.md  spec_draft.md
.cursor/: mcp.json
.cursor/commands/: onboard-new-developer.md  security-audit.md  setup-and-verify-snowflake.md  setup-new-feature.md  verify-snowflake-setup.md
.cursor/rules/: snowflake.mdc
.mcp/: snowflake-tools.yaml
.snowflake/: connections.toml.template
.snowsql/: config.template
.specify/generators/: __init__.py  base.py  generator.py  semantic.py
.specify/memory/: constitution.md
.specify/skills/: generate.md  implement.md  plan.md  specify.md  tasks.md
.specify/templates/: pyproject-template.toml  sample-questions-template.yaml
agentic-systems/: .env.example  README.md  cortex_agent_tool.py  langgraph_agent.py  main.py  pyproject.toml  requirements.txt  setup_cortex_agent.sql
docs/: mcp-snowflake-setup.md  spec-kit-plan.md  template-architecture.md
isf-skills/: snowflake_copilot_task_list.docx.md
isf-skills/aura-react-app/: SKILL.md
isf-skills/aura-style-guide/: SKILL.md
isf-skills/gtm-pitch-local/: SKILL.md  pyproject.toml
isf-skills/isf-cortex-agent/: SKILL.md
isf-skills/isf-cortex-analyst/: SKILL.md
isf-skills/isf-cortex-search/: SKILL.md
isf-skills/isf-data-architecture/: SKILL.md
isf-skills/isf-data-generation/: SKILL.md
isf-skills/isf-data-modeling/: SKILL.md
isf-skills/isf-data-pipeline/: SKILL.md
scripts/: setup-snowflake-mcp.sh
(+328 files in other folders)
